# ark-bot

./: ark-bot.service  config.ini  pyproject.toml
src/: ark.py  bot.py
test/: pastebin.py
