[tool.poetry]
name = "ark-bot"
version = "0.1.0"
description = ""
authors = ["Diogo Regateiro"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.3.2"
python-dateutil = "^2.8.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"